test/parser/programs/invalid/constDecl1.guav
_BAD_CONST = 'Cool'
